version/0.17/_sources/api/solver/_autosummary/settings/viscosity.rst.txt
:orphan:

.. _viscosity:

viscosity
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.viscosity.viscosity
    :show-inheritance:

.. rubric:: Attributes

============================================================   ====================================================

Attribute                                                                                                   Summary

============================================================   ====================================================
:ref:`option <option_10>`                                          Select method for calculating material property.

:ref:`value <value_1>`                                                                               'value' child.

:ref:`piecewise_linear <piecewise_linear>`                                                'piecewise_linear' child.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                    'piecewise_polynomial' child.

:ref:`polynomial <polynomial>`                                                                  'polynomial' child.

:ref:`expression <expression>`                                                                  'expression' child.

:ref:`power_law <power_law>`                                                                     'power_law' child.

:ref:`blottner_curve_fit <blottner_curve_fit>`                                          'blottner_curve_fit' child.

:ref:`gupta_curve_fit_viscosity <gupta_curve_fit_viscosity>`                     'gupta_curve_fit_viscosity' child.

:ref:`sutherland <sutherland>`                                                                  'sutherland' child.

:ref:`cross <cross>`                                                                                 'cross' child.

:ref:`herschel_bulkley <herschel_bulkley>`                                                'herschel_bulkley' child.

:ref:`carreau <carreau>`                                                                           'carreau' child.

:ref:`non_newtonian_power_law <non_newtonian_power_law>`                           'non_newtonian_power_law' child.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

:ref:`rgp_table <rgp_table>`                                                             Select RGP Table Data Set.

:ref:`real_gas_nist <real_gas_nist>`                                                         'real_gas_nist' child.

============================================================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

